syntax = "proto3";

package ethtest;

message InitStateRequest {
}

message InitStateResponse {
}

// We have to use strings/bytes for everything since protobuf doesn't support wide enough integers (e.g., addresses
// in ethereum are 160-bit hashes)
message AccountState {
    string nonce = 1;
    string address = 2;
    string balance = 3;
    map<string, string> storage = 4;
    string code = 5;
}

message EthState {
    map<string, AccountState> accounts = 1;
}

message CreateTokenRequest {
    string creator_address = 1;
    uint64 initial_supply = 2;
}

message CreateTokenResponse {
    string contract_address = 1;
}

message TransferTokenRequest {
    string contract_address = 1;
    string from_address = 2;
    string to_address = 3;
    uint64 amount = 4;
}

message TransferTokenResponse {
}

message GetBalanceRequest {
    string contract_address = 1;
    string address = 2;
}

message GetBalanceResponse {
    uint64 balance = 1;
}
