syntax = "proto3";
package tutorial;

message TokenState
  string name = 1;
  string symbol = 2;
  uint64 total_supply = 3;
  map<string, uint64> balance_of = 4;
}
